--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,10 +41,11 @@ services:
       - manage-recalls-e2e
     container_name: manage-recalls-api-e2e
     ports:
-      - "9091:9091"
+      - "9091:8080"
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8080/health/ping" ]
     environment:
+      - SERVER_PORT=8080
       - SPRING_PROFILES_ACTIVE=dev
       - OAUTH_ENDPOINT_URL=http://hmpps-auth:8080/auth
       - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI=http://hmpps-auth:8080/auth/.well-known/jwks.json
@@ -66,7 +67,7 @@ services:
       - INGRESS_URL=http://localhost:3000
       - HMPPS_AUTH_EXTERNAL_URL=http://localhost:9090/auth
       - HMPPS_AUTH_URL=http://hmpps-auth:8080/auth
-      - MANAGE_RECALLS_API_URL=http://manage-recalls-api:9091
+      - MANAGE_RECALLS_API_URL=http://manage-recalls-api:8080
       - API_CLIENT_ID=ppud-ui-client
       - API_CLIENT_SECRET=clientsecret
       - SYSTEM_CLIENT_ID=system-client-id
