--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -2,6 +2,9 @@
     default {
       webdriver.base.url = "http://localhost:3000"
     }
+    ci-local {
+      webdriver.base.url = "http://manage-recalls-ui:3000"
+    }
     dev {
       webdriver.base.url = "https://manage-recalls-dev.hmpps.service.justice.gov.uk"
     }
