--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     ports:
       - "9092:8080"
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/health/liveness" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/health/ping" ]
     command: --verbose
 
   manage-recalls-api:
