PUD-44: Use awaitility to check if the revocation order is downloaded.  Try using /tmp as the downloads folder

--- a/serenity.properties
+++ b/serenity.properties
@@ -3,6 +3,6 @@ serenity.credentials=~/.serenity/credentials.properties
 webdriver.driver=chrome
 webdriver.autodownload=false
 webdriver.chrome.driver=/usr/local/bin/chromedriver
-chrome_preferences.download.default_directory = ~/Downloads
+chrome_preferences.download.default_directory = /tmp
 chrome_preferences.profile_default_content_settings.popups = 0
 chrome_preferences.pdfjs.disabled=true
