--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,8 @@ services:
   postgres:
     image: postgres:13
     container_name: postgres_manage-recalls-e2e
+    ports:
+      - "5432:5432"
     networks:
       - manage-recalls-e2e
     environment:
