--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,6 @@
 serenity.project.name=Manage Recall End-to-End Tests
 serenity.credentials=~/.serenity/credentials.properties
+webdriver.wait.for.timeout=10000
 webdriver.driver=chrome
 webdriver.autodownload=false
 webdriver.chrome.driver=/usr/local/bin/chromedriver
