--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,11 @@ orbs:
   hmpps: ministryofjustice/hmpps@3.2
   browser-tools: circleci/browser-tools@1.1.3
 
+parameters:
+  only_run_dev_check:
+    type: boolean
+    default: false
+
 executors:
   local-docker:
     docker:
@@ -61,7 +66,13 @@ jobs:
 
 workflows:
   version: 2
-  docker_and_build:
+  dev_and_local:
+    when:
+      not: << pipeline.parameters.only_run_dev_check >>
     jobs:
       - local-check
+      - dev-check
+  dev_only:
+    when: << pipeline.parameters.only_run_dev_check >>
+    jobs:
       - dev-check
