--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,10 @@ jobs:
           name: Start docker compose and run the end-to-end tests
           command: |
             set -x
-            docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --exit-code-from manage-recalls-e2e-tests manage-recalls-e2e-tests
+            exit_code=`docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --exit-code-from manage-recalls-e2e-tests manage-recalls-e2e-tests`
             docker cp manage-recalls-e2e-tests:/home/circleci/project/build/reports/tests/test/ test-report
             docker cp manage-recalls-e2e-tests:/home/circleci/project/target/site/serenity/ serenity-report
+            exit $exit_code
       - store_artifacts:
           path: test-report
           destination: local-test-summary
