--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ services:
       - POSTGRES_DBNAME=manage_recalls
       - POSTGRES_USERNAME=ppud_user
       - POSTGRES_PASSWORD=secret
+      - AWS_LOCAL_ENDPOINT=http://localstack:4566
 
   manage-recalls-ui:
     image: quay.io/hmpps/manage-recalls-ui:latest
@@ -102,9 +103,12 @@ services:
 
   localstack:
     image: localstack/localstack
+    container_name: localstack_manage-recalls-e2e
     ports:
       - "4566:4566"
       - "4571:4571"
+    networks:
+      - manage-recalls-e2e
     environment:
       - SERVICES=s3
       - DOCKER_HOST=unix:///var/run/docker.sock
