PUD-224: Create docker image with startup content in already for circleci

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -14,3 +14,17 @@ services:
       - manage-recalls-e2e
     container_name: manage-recalls-e2e-tests
     depends_on: [manage-recalls-ui]
+
+  localstack:
+    build:
+      dockerfile: localstack-docker/Dockerfile
+      context: .
+    ports:
+      - "4566:4566"
+      - "4571:4571"
+    networks:
+      - manage-recalls-e2e
+    container_name: localstack_manage-recalls-e2e
+    environment:
+      - SERVICES=s3
+      - DATA_DIR=/tmp/localstack/data
