PUD-224: Create docker image with startup content in already for circleci

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -9,6 +9,7 @@ services:
   manage-recalls-e2e-tests:
     build:
       dockerfile: ci-local-mode-docker/Dockerfile
+      context: .
     networks:
       - manage-recalls-e2e
     container_name: manage-recalls-e2e-tests
