PUD-XXX: Add full page screenshots

--- a/serenity.properties
+++ b/serenity.properties
@@ -6,3 +6,4 @@ webdriver.chrome.driver=/usr/local/bin/chromedriver
 chrome_preferences.download.default_directory = /tmp
 chrome_preferences.profile_default_content_settings.popups = 0
 chrome_preferences.pdfjs.disabled=true
+serenity.full.page.screenshot.strategy=true
