PUD-454: Add support for env specific nomsNumber. Re-enable user detail validation

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,15 +1,19 @@
   environments {
     default {
       webdriver.base.url = "http://localhost:3000"
+      noms.number = A1234AA
     }
     ci-local {
       webdriver.base.url = "http://manage-recalls-ui:3000"
+      noms.number = A1234AA
     }
     dev {
       webdriver.base.url = "https://manage-recalls-dev.hmpps.service.justice.gov.uk"
+      noms.number = A1234AA
     }
     preprod {
       webdriver.base.url = "https://manage-recalls-preprod.hmpps.service.justice.gov.uk"
+      noms.number = A0148AP
     }
     prod {
       webdriver.base.url = "https://manage-recalls.hmpps.service.justice.gov.uk"
