--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
       - run:
           name: Build and pull docker containers
           command: |
+            docker-compose -f docker-compose.yml -f docker-compose.ci.yml pull manage-recalls-e2e-tests
             docker-compose -f docker-compose.yml -f docker-compose.ci.yml build
             docker-compose -f docker-compose.yml -f docker-compose.ci.yml pull
       - run:
