--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
     docker:
       - image: quay.io/hmpps/manage-recalls-e2e-tests:latest
     environment:
-      SERENITY_USERNAME: $SERENITY_USERNAME_<<pipeline.parameters.e2e_environment>>
+      SERENITY_USERNAME: ${SERENITY_USERNAME_<<pipeline.parameters.e2e_environment>>}
       SERENITY_PASSWORD: $SERENITY_PASSWORD_<<pipeline.parameters.e2e_environment>>
     steps:
       - checkout
