--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,14 +60,11 @@ jobs:
   deploy-check:
     docker:
       - image: quay.io/hmpps/manage-recalls-e2e-tests:latest
-        environment:
-          SERENITY_USERNAME: $SERENITY_USERNAME_<<pipeline.parameters.e2e_environment>>
-          SERENITY_PASSWORD: $SERENITY_PASSWORD_<<pipeline.parameters.e2e_environment>>
     steps:
       - checkout
       - run:
           name: "Run Gradle tests [<<pipeline.parameters.e2e_environment>>]"
-          command: ./gradlew test -Denvironment=<<pipeline.parameters.e2e_environment>> -Dchrome.switches=--headless
+          command: SERENITY_USERNAME=${SERENITY_USERNAME_<<pipeline.parameters.e2e_environment>>} SERENITY_PASSWORD=${SERENITY_PASSWORD_<<pipeline.parameters.e2e_environment>>}  ./gradlew test -Denvironment=<<pipeline.parameters.e2e_environment>> -Dchrome.switches=--headless
       - store_artifacts:
           path: build/reports/tests/test
           destination: deploy-test-summary
