PUD-454: Stop running docker-build on deploy-check only runs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,8 @@ workflows:
       - deploy-check
 
   build_docker:
+    when:
+      not: << pipeline.parameters.only_run_deploy_check >>
     jobs:
       - build-docker-approval:
           type: approval
