Fix fake prisoner register api

--- a/docker-compose-local-build.yml
+++ b/docker-compose-local-build.yml
@@ -17,6 +17,7 @@ services:
       - OAUTH_ENDPOINT_URL=http://hmpps-auth:8080/auth
       - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI=http://hmpps-auth:8080/auth/.well-known/jwks.json
       - PRISONERSEARCH_ENDPOINT_URL=http://fake-prisoner-offender-search-api:8080
+      - PRISONREGISTER_ENDPOINT_URL=http://fake-prison-register-api:8080
       - GOTENBERG_ENDPOINT_URL=http://gotenberg:3000
 
   manage-recalls-ui:
