Add start of fake prison register

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
     networks:
       - manage-recalls-e2e
     container_name: manage-recalls-api-e2e
-    depends_on: [gotenberg, fake-prisoner-offender-search-api, postgres, localstack]
+    depends_on: [gotenberg, fake-prisoner-offender-search-api, fake-prison-register-api, postgres, localstack]
     ports:
       - "9091:8080"
     healthcheck:
