PUD-558: Add email address & phone number to user details - use alpine to fix postgres failure to launch on circleci

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,7 +102,7 @@ services:
       - SESSION_SECRET=session-secret
 
   postgres:
-    image: postgres:13
+    image: postgres:13-alpine
     container_name: postgres_manage-recalls-e2e
     ports:
       - "5432:5432"
