--- a/serenity.properties
+++ b/serenity.properties
@@ -1,4 +1,6 @@
 serenity.project.name=Manage Recall End-to-End Tests
+serenity.take.screenshots=FOR_FAILURES
+serenity.full.page.screenshot.strategy=true
 webdriver.wait.for.timeout=10000
 webdriver.driver=chrome
 webdriver.autodownload=false
