PUD-682: use hmpps clamav image, increase memory limit PUD-323: Sentencing court autocomplete

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,12 +54,23 @@ services:
       test: [ "CMD", "curl", "-f", "http://localhost:8080/health/ping" ]
     command: --verbose
 
+  fake-court-register-api:
+    image: quay.io/hmpps/ppud-fake-court-register-api:latest
+    networks:
+      - manage-recalls-e2e
+    container_name: fake-court-register-api-e2e
+    ports:
+      - "9095:8080"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/health/ping" ]
+    command: --verbose
+
   manage-recalls-api:
     image: quay.io/hmpps/manage-recalls-api:latest
     networks:
       - manage-recalls-e2e
     container_name: manage-recalls-api-e2e
-    depends_on: [gotenberg, fake-prisoner-offender-search-api, fake-prison-register-api, postgres, localstack, clamav]
+    depends_on: [gotenberg, fake-prisoner-offender-search-api, fake-prison-register-api, fake-court-register-api, postgres, localstack, clamav]
     ports:
       - "9091:8080"
     healthcheck:
@@ -71,6 +82,7 @@ services:
       - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI=http://hmpps-auth:8080/auth/.well-known/jwks.json
       - PRISONERSEARCH_ENDPOINT_URL=http://fake-prisoner-offender-search-api:8080
       - PRISONREGISTER_ENDPOINT_URL=http://fake-prison-register-api:8080
+      - COURTREGISTER_ENDPOINT_URL=http://fake-court-register-api:8080
       - GOTENBERG_ENDPOINT_URL=http://gotenberg:3000
       - POSTGRES_HOST=postgres:5432
       - POSTGRES_DBNAME=manage_recalls
@@ -126,7 +138,7 @@ services:
       - DATA_DIR=/tmp/localstack/data
 
   clamav:
-    image: mkodockx/docker-clamav
+    image: ghcr.io/ministryofjustice/hmpps-clamav-freshclammed
     networks:
       - manage-recalls-e2e
     container_name: clamav_manage-recalls-e2e
@@ -135,7 +147,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 1G
+          memory: 2G
 
 networks:
   manage-recalls-e2e:
