PUD-682:  use hmpps clamav image, increase memory limit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,7 +126,7 @@ services:
       - DATA_DIR=/tmp/localstack/data
 
   clamav:
-    image: mkodockx/docker-clamav
+    image: ghcr.io/ministryofjustice/hmpps-clamav-freshclammed
     networks:
       - manage-recalls-e2e
     container_name: clamav_manage-recalls-e2e
@@ -135,7 +135,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 1G
+          memory: 2G
 
 networks:
   manage-recalls-e2e:
