PUD-682: Up executor resource_class to medium.  Add clamav logs to artifcats

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ executors:
     docker:
       - image: cimg/python:3.9
     working_directory: ~/app
+    resource_class: medium
 
 jobs:
   local-check:
@@ -41,6 +42,7 @@ jobs:
             docker logs manage-recalls-ui-e2e > logs/manage-recalls-ui.log
             docker logs manage-recalls-api-e2e > logs/manage-recalls-api.log
             docker logs localstack_manage-recalls-e2e > logs/localstack_manage-recalls-e2e.log
+            docker logs clamav_manage-recalls-e2e > logs/clamav.log
             docker cp manage-recalls-e2e-test-runner:/home/circleci/project/build/reports/tests/test/ test-report
             docker cp manage-recalls-e2e-test-runner:/home/circleci/project/target/site/serenity/ serenity-report
             exit $exit_code
