--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,8 @@ jobs:
   deploy-check:
     docker:
       - image: quay.io/hmpps/manage-recalls-e2e-tests:latest
+    environment:
+      ENVIRONMENT: <<pipeline.parameters.e2e_environment>>
     steps:
       - checkout
       - run:
@@ -68,7 +70,10 @@ jobs:
             SERENITY_USERNAME=${SERENITY_USERNAME_<<pipeline.parameters.e2e_environment>>} \
             SERENITY_PASSWORD=${SERENITY_PASSWORD_<<pipeline.parameters.e2e_environment>>} \
             NOMS_NUMBER=${NOMS_NUMBER_<<pipeline.parameters.e2e_environment>>} \
-            ./gradlew test -Denvironment=<<pipeline.parameters.e2e_environment>>
+            ./gradlew test -Denvironment=${ENVIRONMENT}
+            export E2E_RESULT=$?
+            ./report-results-to-dashboard.sh
+            exit $E2E_RESULT
       - store_artifacts:
           path: build/reports/tests/test
           destination: deploy-test-summary
